# webserv

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doc_source  Dockerfile  Makefile  README.md  docker-compose.yml  mime.types  webserv
2-Log/: Log.class.cpp  Log.class.hpp
3-Config/: Code.class.cpp  Code.class.hpp  Code.cpp  Code.hpp  Config.class.cpp  Config.class.hpp  ConfigFile.class.cpp  ConfigFile.class.hpp  Events.class.cpp  Events.class.hpp  Header.cpp  Header.hpp  Http.class.cpp  Http.class.hpp  Listen.class.cpp  Listen.class.hpp  Location.class.cpp  Location.class.hpp  Server.class.cpp  Server.class.hpp  Types.class.cpp  Types.class.hpp
3-Message/: Headers_external_library.hpp
4-Http/: Execute.class.cpp  Execute.class.hpp  Header.hpp  HttpMessage.class.cpp  HttpMessage.class.hpp  HttpReponse.class.cpp  HttpReponse.class.hpp  HttpRequest.class.cpp  HttpRequest.class.hpp
5-Epoll/: Epoll.class.cpp  Epoll.class.hpp  Socket.class.cpp  Socket.class.hpp  Token.cpp  Token.hpp
6-PegParser/: PegParser.class.cpp  PegParser.class.hpp
7-Socket/: Socket.class.cpp  Socket.class.hpp
Data/: http_status_code.json
Doc/: Doc_source.txt  Dockerfile.webserv_env_dev  summary.txt
Docker_build/: Dockerfile
Include/: 0-webserv.hpp  A_baseSocket.class.hpp  Config.hpp  Parser.class.hpp  Parser.hpp  Route.class.hpp  Route.hpp  baseEpoll.class.hpp  client.class.hpp  clientSocket.class.hpp  colors.hpp  config_address.class.hpp  config_server.class.hpp  config_webserv.class.hpp  data_server.class.hpp  header.hpp  http_request.class.hpp  parse_config_file.class.hpp  peg_parser.class.hpp  server.class.hpp  serverSocket.class.hpp  test.hpp  webserv.hpp
Jb_unitTest/: CMakeLists.txt  Makefile
Source_Code/: Makefile  main.cpp  main.hpp  (+1 more)
Source_Code/0-ClI/: CMakeLists.txt  main.cpp
Source_Code/0-ClI/Includes/: Cli.class.hpp
Source_Code/0-ClI/Sources/: Cli.class.cpp
Source_Code/0-Cli/: CMakeLists.txt  Makefile  main.cpp
Source_Code/0-Cli/Includes/: Cli.class.hpp
Source_Code/0-Cli/Sources/: Cli.class.cpp
Source_Code/1-Config/: CMakeLists.txt  main.cpp
Source_Code/1-Config/Includes/: Code.class.hpp  Config.hpp  ConfigFile.class.hpp  Events.class.hpp  Http.class.hpp  Listen.class.hpp  Location.class.hpp  Log.class.hpp  Server.class.hpp  Types.class.hpp
Source_Code/1-Config/Sources/: Code.class.cpp  Config.cpp  ConfigFile.class.cpp  Events.class.cpp  Http.class.cpp  Listen.class.cpp  Location.class.cpp  Log.class.cpp  Server.class.cpp  Types.class.cpp
Source_Code/2-Engin/: CMakeLists.txt  main.cpp
Source_Code/2-Engin/Includes/: Client.class.hpp  Epoll.class.hpp  Socket.class.hpp  Token.hpp
Source_Code/2-Engin/Sources/: Client.class.cpp  Epoll.class.cpp  Socket.class.cpp  Token.cpp
Source_Code/3-Message/: CMakeLists.txt
Source_Code/3-Message/Includes/: Execute.class.hpp  HttpBody.Aclass.hpp  HttpBodyReponse.class.hpp  HttpBodyRequest.class.hpp  HttpDELETERequest.class.hpp  HttpGETRequest.class.hpp  HttpHeaders.Aclass.hpp  HttpHeadersReponse.class.hpp  HttpHeadersRequest.class.hpp  HttpMessage.Aclass.hpp  HttpMessage.Iclass.hpp  HttpMessage.class.hpp  HttpPOSTRequest.class.hpp  HttpReponse.class.hpp  HttpRequest.class.hpp
Source_Code/3-Message/Sources/: Execute.class.cpp  HttpBody.Aclass.cpp  HttpBodyReponse.class.cpp  HttpBodyRequest.class.cpp  HttpDELETERequest.class.cpp  HttpGETRequest.class.cpp  HttpHeaders.Aclass.cpp  HttpHeadersReponse.class.cpp  HttpHeadersRequest.class.cpp  HttpMessage.Aclass.cpp  HttpMessage.class.cpp  HttpPOSTRequest.class.cpp  HttpReponse.class.cpp  HttpRequest.class.cpp
Source_Code/4-Utils/: CMakeLists.txt  Makefile
Source_Code/4-Utils/Includes/: PegParser.class.hpp  Utils.hpp
Source_Code/4-Utils/Sources/: PegParser.class.cpp  Utils.cpp
Source_Code/4-Utils/Template/: PegParser.class.tpp  recv_send.tpp
Source_Code/4.1-ConversionUtils/: CMakeLists.txt  main.cpp
Source_Code/4.1-ConversionUtils/Includes/: ConversionUtils.hpp
Source_Code/4.1-ConversionUtils/Sources/: ConversionUtils.cpp
Source_Code/4.1-Converter/: CMakeLists.txt  main.cpp
Source_Code/4.1-Converter/Includes/: Converter.class.hpp  Converter.hpp
Source_Code/4.1-Converter/Sources/: Converter.class.cpp  Converter.cpp
Source_Code/4.2-FileSystem/: CMakeLists.txt  main.cpp
Source_Code/4.2-FileSystem/Includes/: FileSystem.class.hpp  FileSystem.hpp
Source_Code/4.2-FileSystem/Sources/: FileSystem.class.cpp  FileSystem.cpp
Source_Code/4.3-Setter/: CMakeLists.txt  main.cpp
Source_Code/4.3-Setter/Includes/: Setter.class.hpp  Setter.hpp
Source_Code/4.3-Setter/Sources/: Setter.class.cpp  Setter.cpp
Source_Code/5-Log/: CMakeLists.txt  main.cpp
Source_Code/5-Log/Includes/: Log.class.hpp
Source_Code/5-Log/Sources/: Log.class.cpp
Source_Code/6-Token/: CMakeLists.txt  Makefile  main.cpp
Source_Code/6-Token/Includes/: Token.class.hpp
Source_Code/6-Token/Sources/: Token.class.cpp
Source_Code/7-PegParser/: CMakeLists.txt  main.cpp
Source_Code/7-PegParser/Template/: PegParser.class.tpp
libUnitTest/: CMakeLists.txt  Makefile
libUnitTest/Include/: unit_test.hpp
libUnitTest/Sources/: testConf.cpp  unitTestInit.cpp  unitTestLauncher.cpp  unitTestPegParser.cpp  unitTestThrow.cpp
libUnitTest/config_test/: base.conf  base.expect  minimal_empty.expect  minimal_http.expect  minimal_server.expect  multiServer.conf  multiServer.expect  wrongClientBodyBufferSizeMax_error.conf  wrongClientBodyBufferSizeMin_error.conf  wrongClientBodyHeaderSizeMax_error.conf  wrongClientBodyHeaderSizeMin_error.conf  wrongClientMaxBodySizeMax_error.conf  wrongClientMaxBodySizeMin_error.conf  wrongCodeMax_error.conf  wrongCodeMin_error.conf  wrongCodeNotFound_error.conf  wrongCodeNotIndex_error.conf  wrongListenIPNoPort_error.conf  wrongListenIP_error.conf  wrongListenPortMax_error.conf  wrongListenPortMin_error.conf  wrongRoot_error.conf  wrongServerNameEmpty_error.conf  wrongWorkerConnectionMax_error.conf  wrongWorkerConnectionMin_error.conf  wrongWorkerProcessMax_error.conf  wrongWorkerProcessMin_error.conf
libUnitTest/config_test/minimal_conf/: minimal_http.conf
(+357 files in other folders)
